# streamhawk

./: .dockerignore  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  config.json  docker-compose.yml  movies.txt  pyproject.toml  requirements.txt  setup.py  streamhawk.py
src/streamhawk/: __init__.py  cli.py  downloader.py  extractor.py  fingerprints.py  imdb.py  m3u8_parser.py  main.py  postprocessor.py  web.py
src/streamhawk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
streamhawk/: __init__.py  browser.py  cli.py  config.py  m3u8_parser.py  main.py  notifications.py  subtitles.py  utils.py  web.py
tests/: __init__.py  test_config.py  test_hls.py  test_m3u8_parser.py  test_utils.py
